<resources>
    <string name="app_name">GR Quiz</string>
    <string name="app_description">All Rounder Quiz App For All Rounders</string>
    <string name="madeInIndia">Made with ❤️ in 🇮🇳</string>
    <string name="study">Study</string>
    <string name="practice">Practice</string>
    <string name="test">Test</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="instasavex">InstaSaveX</string>
    <string name="more_apps">More Apps</string>
    <string name="app_not_installed">App Not Installed</string>
    <string name="play_store_app">https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="play_more_app">https://play.google.com/store/apps/developer?id=NKR00711</string>

    <string name="about_us_version">Version</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">Your email id</string>
    <string name="about_us_about">About</string>
    <string name="about_us_detail">About us detail</string>

    <string name="privacy_close_dialog_text">Click on the Image Above to Close this Dialog</string>
    <string name="close">Close</string>
    <string name="you_are_offline">You are offline</string>
</resources>