<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".frag.SelectionHome">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/study"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        card_view:cardCornerRadius="@dimen/_10sdp"
        card_view:cardElevation="@dimen/_5sdp"
        android:layout_gravity="center">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/study"
            android:contentDescription="@string/app_name" />

        <TextView
            android:text="@string/study"
            android:textStyle="bold"
            android:padding="@dimen/_5sdp"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.ActionBar.Title"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/practice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        card_view:cardCornerRadius="@dimen/_10sdp"
        card_view:cardElevation="@dimen/_5sdp"
        android:layout_gravity="center">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/practice"
            android:contentDescription="@string/app_name" />

        <TextView
            android:text="@string/practice"
            android:textStyle="bold"
            android:padding="@dimen/_5sdp"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.ActionBar.Title"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        card_view:cardCornerRadius="@dimen/_10sdp"
        card_view:cardElevation="@dimen/_5sdp"
        android:layout_gravity="center">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/test"
            android:contentDescription="@string/app_name" />

        <TextView
            android:text="@string/test"
            android:textStyle="bold"
            android:padding="@dimen/_5sdp"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.ActionBar.Title"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>